# iproto-tarantool-sniffer

./: .gitignore  Dockerfile.sniffer  LICENSE  README.md  pyproject.toml
docker_tarantool_test/: docker-compose.yaml
docker_tarantool_test/config/: config.yaml
iproto_sniffer/: core.py  helpers.py  main.py  payload_process.py  utils.py
iproto_sniffer/data/: body.py  header.py
